# hprof-report

./: README.md  pyproject.toml  requirements.txt  run_hprof_report.sh
hprof_report/: __init__.py  analyzer.py  cli.py  disk_graph.py  model.py  parser.py
tests/: test_minimal_hprof.py
